Add Hide Button

--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
 		Copyright © 2019 Peter Vashevko
 		<br>
 		See code and license for this site on <a class="Attribution-link" href="https://github.com/theaquarium/dvdcorners">GitHub</a>
+		<br>
+		<span class="HideButton">Hide this text.</span>
 	</div>
 </body>
 </html>
