--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 		<br>
 		Click and drag to move the logo manually. Space to pause.
 		<br>
-		Copyright © 2019 Peter Vashevko
+		Copyright © 2019 Leah Vashevko
 		<br>
 		See code and license for this site on <a class="Attribution-link" href="https://github.com/theaquarium/dvdcorners">GitHub</a>
 		<br>
